Bug Fix: technologies list nowrap

--- a/src/components/ProjectCard/projectCard.module.scss
+++ b/src/components/ProjectCard/projectCard.module.scss
@@ -82,10 +82,11 @@
       font-size: 1.1rem;
       list-style-type: none;
       display: flex;
+      justify-content: space-between;
 
       li {
-        margin-right: 2rem;
         color: var(--purple-300);
+        white-space: nowrap;
 
         &:last-child {
           margin-right: 0;
@@ -112,6 +113,20 @@
 
       a:first-of-type {
         margin-right: 1rem;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 420px) {
+  .projectCardContainer {
+    .projectInfo {
+      .technologies {
+        justify-content: end;
+
+        li {
+          margin-right: 2rem;
+        }
       }
     }
   }
@@ -167,6 +182,14 @@
           0 22.3px 17.9px rgba(0, 0, 0, 0.072),
           0 41.8px 33.4px rgba(0, 0, 0, 0.086),
           0 100px 80px rgba(0, 0, 0, 0.12);
+      }
+
+      .technologies {
+        justify-content: start;
+
+        li {
+          margin-right: 2rem;
+        }
       }
     }
 
